# ShareClaw

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: openclaw-isolation-guide.md
scripts/: deploy.sh  publish.sh
shareclaw/: __init__.py  cli.py  config.py
shareclaw/claw/: __init__.py  commands.py  isolation.py  queue.py  rotate.py  scheduler.py
shareclaw/claw/backend/: __init__.py  base.py  local.py  remote.py
shareclaw/cloud/: __init__.py  client.py  lighthouse.py  tat.py
shareclaw/server/: __init__.py  app.py  routes.py  sse.py
shareclaw/server/templates/: dashboard.html  index.html
shareclaw/sharing/: __init__.py  auto_rotate.py  invitation.py  store.py  user.py
tests/: test_config.py  test_isolation.py  test_queue.py  test_scheduler.py  test_sse.py
